Fix nasty bug in docker-compose.yml for mongodb_init: When docker desktop is not installed, we need to manually set up the host.docker.internal resolution in ALL containers.

--- a/mongodb/docker-compose.yml
+++ b/mongodb/docker-compose.yml
@@ -42,6 +42,8 @@ services:
       context: initialization
       dockerfile: Dockerfile
     container_name: mongodb_init
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - mongodb
 
