update env template

--- a/.env.template
+++ b/.env.template
@@ -5,19 +5,31 @@ NEXT_PUBLIC_SUPABASE_URL=http://localhost:8800
 
 
 # Set the following variables to the correct values
-NEXT_PUBLIC_HF_API_KEY=
-NEXT_PUBLIC_MONGODB_PWD=
+NEXT_PUBLIC_CHAMALEON_KEY=
+NEXT_PUBLIC_CHAT_BACKEND_URL="http://localhost:8000/"
+NEXT_PUBLIC_INDEX_URL="http://localhost:8000"
 NEXT_PUBLIC_NOTION_OAUTH_CLIENT_ID=
-NEXT_PUBLIC_POSTHOG_KEY=
+NEXT_PUBLIC_POSTHOG_API_KEY=
+NEXT_PUBLIC_REACT_APP_ENV="production"
+NEXT_PUBLIC_STACKEND_URL="http://localhost:8000/"
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+NEXT_PUBLIC_SUPABASE_URL="http://localhost:8800"
 
 # Remember to adjust this to match the correct ANON key, if the jwt secret is changed, the ANON key will also change.
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
 # Privete keys used in stackweb container
-STACK_API_KEY=DATA
+FONTAWESOME_PACKAGE_TOKEN=
+GOOGLE_CLIENT_EMAIL=
+GOOGLE_SERVICE_PRIVATE_KEY=
+NX_DAEMON=""
+REACT_APP_ENV=
+SHEET_ID=
+SPREADSHEET_ID=
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
+TURBO_REMOTE_ONLY=""
+TURBO_RUN_SUMMARY=""
 
 # Remember to adjust this to match the correct service role key. if supabase jwt secret is changed, the service role key will also change.
 SUPABASE_SERVICE_ROLE_KEY=
