--- a/.env.template
+++ b/.env.template
@@ -5,31 +5,43 @@ NEXT_PUBLIC_SUPABASE_URL=http://localhost:8800
 
 
 # Set the following variables to the correct values
-NEXT_PUBLIC_CHAMALEON_KEY=
+NEXT_PUBLIC_INDEX_URL="http://localhost:8000/"
 NEXT_PUBLIC_CHAT_BACKEND_URL="http://localhost:8000/"
-NEXT_PUBLIC_INDEX_URL="http://localhost:8000"
-NEXT_PUBLIC_NOTION_OAUTH_CLIENT_ID=
-NEXT_PUBLIC_POSTHOG_API_KEY=
-NEXT_PUBLIC_REACT_APP_ENV="production"
 NEXT_PUBLIC_STACKEND_URL="http://localhost:8000/"
+NEXT_PUBLIC_URL="http://localhost:3000"
+NEXT_PUBLIC_VERCEL_ENV="development"
+NEXT_PUBLIC_REACT_APP_ENV="production"
+NEXT_PUBLIC_AIRTABLE_CLIENT_ID=
+NEXT_PUBLIC_AIRTABLE_CODE_VERIFIER=
+NEXT_PUBLIC_CHAMALEON_KEY=
+NEXT_PUBLIC_DROPBOX_CLIENT_ID=
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=
+NEXT_PUBLIC_HUBSPOT_CLIENT_ID=
+NEXT_PUBLIC_NOTION_CLIENT_ID=
+NEXT_PUBLIC_NOTION_OAUTH_CLIENT_ID=
+NEXT_PUBLIC_OUTLOOK_CLIENT_ID=
+NEXT_PUBLIC_POSTHOG_API_KEY=
+NEXT_PUBLIC_POSTHOG_HOST=
+NEXT_PUBLIC_SENTRY_DSN=
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
-NEXT_PUBLIC_SUPABASE_URL="http://localhost:8800"
+NEXT_PUBLIC_TYPEFORM_CLIENT_ID=
 
 # Remember to adjust this to match the correct ANON key, if the jwt secret is changed, the ANON key will also change.
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
+
 # Privete keys used in stackweb container
-FONTAWESOME_PACKAGE_TOKEN=
-GOOGLE_CLIENT_EMAIL=
-GOOGLE_SERVICE_PRIVATE_KEY=
-NX_DAEMON=""
-REACT_APP_ENV=
-SHEET_ID=
+VERCEL_ENV="development"
+SHEET_ID="0"
+NPM_RC=
+RESEND_API_KEY=
+SLACK_CUSTOMER_SUPPORT_WEBHOOK=
 SPREADSHEET_ID=
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
-TURBO_REMOTE_ONLY=""
-TURBO_RUN_SUMMARY=""
+TIPTAP_PRO_TOKEN=
+
+
 
 # Remember to adjust this to match the correct service role key. if supabase jwt secret is changed, the service role key will also change.
 SUPABASE_SERVICE_ROLE_KEY=
