update setup instructions and docker compose files

--- a/stackend.env.template
+++ b/stackend.env.template
@@ -3,11 +3,19 @@
 # #########################################################
 
 # TODO: The default values for the urls are based on the docker-comopose setup.
-
+# TODO: Create a new 32bit base64 encription key
 # SUPABASE
 SUPABASE_URL=http://kong:8000
 SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
+supabase_encryption_key='l5e9Z0ZEhrmg++Z5IrhWocBfZyBfM/A8Yy8vqjlfKlg='
+
+# POSTGRES (ADJUST WITH THE VALUES IN THE SUPABASE .env)
+POSTGRES_DB_HOST='db'
+POSTGRES_DB_NAME='postgres'
+POSTGRES_DB_PORT='5432'
+POSTGRES_DB_USER=
+POSTGRES_DB_PASSWORD=
 
 MONGODB_URI=mongodb://mongodb:27017/?replicaSet=rs0
 
@@ -26,10 +34,15 @@ WEAVIATE_KEY=
 # REDIS
 REDIS_URL=redis://redis:6379
 
-# ???
-DEVELOPMENT_MODE=<fill_in_your_value>
-ENVIRONMENT=<fill_in_your_value>
+# SENTRY ENVIRONMENT
+ENVIRONMENT='DEVELOPMENT'
+DEPLOYMENT_ENVIRONMENT='development_local'
 sentry_dsn=?
+
+
+
+# STACK REPL
+REPL_URL=http://stackrepl:7777
 
 
 # #########################################################
@@ -46,123 +59,172 @@ OPENAI_API_KEY_4=
 OPENAI_API_KEY_5=
 
 # Azure
-AZURE_OPENAI_KEY=
-AZURE_OPENAI_ENDPOINT=
-AZURE_OPENAI_REGION=
 AZURE_APP_ID=
 AZURE_APP_SECRET=
+AZURE_OPENAI_ENDPOINT=
+AZURE_OPENAI_KEY=
+AZURE_OPENAI_REGION=
 
-# MISTRAL
-MISTRAL_API_KEY=
-
-# Cohere
-COHERE_API_KEY=
-
-# Google PALM
-GOOGLE_PALM_API=
-
-# Anthropic
-ANTHROPIC_API_KEY=
-
-# AWS
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-
-# AWS BEDROCK
+# Bedrock
 BEDROCK_ACCESS_KEY_ID=
 BEDROCK_PROFILE=
 BEDROCK_REGION=
 BEDROCK_SECRET_ACCESS_KEY=
 
-# Huggingface
-HUGGINGFACE_API_KEY=
-HUBSPOT_CLIENT_SECRET=
-HUBSPOT_CLIENT_ID=
 
-# Perplexity
-PERPLEXITY_API_KEY=
-
-# Poplar
+# POPLARML
 POPLARML_KEY=
 
+# Anthropic
+ANTHROPIC_API_KEY=
 
-# ## Google ## #
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+# GROQ
+GROQ_AI_API_KEY=
+
+
+# PERPLEXITY
+PERPLEXITY_API_KEY=
+
+# Vertex
+VERTEX_AI_PROJECT_ID=
+VERTEX_AI_PROJECT_LOCATION=
+VERTEX_AI_SERVICE_ACCOUNT_MAIL=
+VERTEX_AI_SERVICE_ACCOUNT_PKEY=
+VERTEX_AI_SERVICE_ACCOUNT_PKEY_ID=
+
+# HUGGINGFACE
+HUGGINGFACE_API_KEY=
+
+# AIRTABLE
+AIRTABLE_CLIENT_ID=
+AIRTABLE_CLIENT_SECRET=
+AIRTABLE_CODE_VERIFIER=
+
+# APIFY
+APIFY_MAX_CRAWL_DEPTH=
+APIFY_TOKEN=
+
+# AWS
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+
+# CALENDLY
+CALENDLY_CLIENT_ID=
+CALENDLY_CLIENT_SECRET=
+
+# CHAMALEON
+CHAMALEON_API_KEY=
+
+# COHERE
+COHERE_API_KEY=
+
+# DEEPGRAM
+DEEPGRAM_API_KEY=
+
+# DROPBOX
+DROPBOX_APP_KEY=
+DROPBOX_APP_SECRET=
+
+# EASYCRON
+EASYCRON_KEY=
+
+# ELEVEN LABS
+ELEVEN_LABS_API_KEY=
+
+# EXA
+EXA_API_KEY=
+
+# FIRECRAWL
+FIRECRAWL_KEY=
 
 # GMAIL
 GMAIL_CLIENT_ID=
 GMAIL_CLIENT_SECRET=
 
-# Onboarding spreadsheet
-google_sheet_private_key=
+# GOOGLE
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_PALM_API=
+GOOGLE_SHEET_PRIVATE_KEY=
 GOOGLE_SHEET_SPREADSHEET_ID=
 GOOGLE_SHEET_WORKSHEET_NAME=
-GOOGLE_SHEET_PRIVATE_KEY=
 
-# ## Other Integrations ## #
-# Notion
+
+
+# HUBSPOT
+HUBSPOT_CLIENT_ID=
+HUBSPOT_CLIENT_SECRET=
+
+
+
+# CALENDLY
+LOCAL_CALENDLY_CLIENT_ID=
+LOCAL_CALENDLY_CLIENT_SECRET=
+
+# MAILCHIMP
+MAILCHIMP_API_KEY=
+
+# MISTRAL
+MISTRAL_API_KEY=
+
+
+# NGROK
+NGROK_AUTHTOKEN=
+NGROK_DOMAIN=
+NGROK_URL=
+
+# NOTION
 NOTION_CLIENT_ID=
 NOTION_CLIENT_SECRET=
 
-# Pinecone API
+# OUTLOOK
+OUTLOOK_CLIENT_ID=
+OUTLOOK_CLIENT_SECRET=
+
+
+# PINECONE
 PINECONE_API_KEY=
 PINECONE_ENV=
 
-# Replicate
+# POLYTOMIC
+POLYTOMIC_API_KEY=
+
+
+# PSPDFKIT
+PSPDFKIT_API_KEY=
+
+# REDUCTO
+REDUCTO_AUTH_TOKEN=
+
+# REPLICATE
 REPLICATE_API_TOKEN=
 
-# Wolframalpha
-WOLFRAM_APP_ID=
+
+# RESEND
+RESEND_API_KEY=
+
+# S3
+S3_AWS_ACCESS_KEY=
+S3_AWS_REGION=
+S3_AWS_SECRET_ACCESS_KEY=
+S3_USERCONTENT_PUBLIC_BUCKET=
 
 # SERPER
 SERPER_API_KEY=
-
-# Apify
-APIFY_TOKEN=
-
-# Stripe
-STRIPE_SECRET_KEY=
-
-# Chameleon
-CHAMALEON_API_KEY=
-
-# ELEVEN LABS
-ELEVEN_LABS_API_KEY=
-
-# Deepgram
-DEEPGRAM_API_KEY=
-
-# Resend
-RESEND_API_KEY=
-
-# Airtable
-AIRTABLE_CLIENT_ID=
-AIRTABLE_CLIENT_SECRET=
-
-# REPL
-REPL_URL=
-
-# SERP
 SERP_API_KEY=
 
-# Twilio
+# STRIPE
+STRIPE_SECRET_KEY='?'
+
+# TOGETHERAI
+TOGETHER_AI_API_KEY=
+
+# TWILIO
 TWILIO_AUTH_TOKEN=
 
-# Typeform
+# TYPEFORM
 TYPEFORM_CLIENT_ID=
 TYPEFORM_CLIENT_SECRET=
 
-# Calendly
-LOCAL_CALENDLY_CLIENT_SECRET=
-LOCAL_CALENDLY_CLIEND_ID=
-LOCAL_CALENDLY_CLIENT_ID=
-CALENDLY_CLIEND_ID=
-CALENDLY_CLIENT_ID=
-CALENDLY_CLIENT_SECRET=
-
-# Easycron
-EASYCRON_KEY=
-
-# NGROK
-NGROK_URL=
+# WOLFRAM
+WOLFRAM_APP_ID=
