--- a/stackweb.docker-compose.yml
+++ b/stackweb.docker-compose.yml
@@ -6,13 +6,26 @@ services:
       context: stackweb/
       dockerfile: Dockerfile
       args:
-        - NEXT_PUBLIC_HF_API_KEY=${NEXT_PUBLIC_HF_API_KEY}
-        - NEXT_PUBLIC_MONGODB_PWD=${NEXT_PUBLIC_MONGODB_PWD}
+        - NEXT_PUBLIC_INDEX_URL=${NEXT_PUBLIC_INDEX_URL}
+        - NEXT_PUBLIC_CHAT_BACKEND_URL=${NEXT_PUBLIC_CHAT_BACKEND_URL}
+        - NEXT_PUBLIC_STACKEND_URL=${NEXT_PUBLIC_STACKEND_URL}
+        - NEXT_PUBLIC_URL=${NEXT_PUBLIC_URL}
+        - NEXT_PUBLIC_VERCEL_ENV=${NEXT_PUBLIC_VERCEL_ENV}
+        - NEXT_PUBLIC_REACT_APP_ENV=${NEXT_PUBLIC_REACT_APP_ENV}
+        - NEXT_PUBLIC_AIRTABLE_CLIENT_ID=${NEXT_PUBLIC_AIRTABLE_CLIENT_ID}
+        - NEXT_PUBLIC_AIRTABLE_CODE_VERIFIER=${NEXT_PUBLIC_AIRTABLE_CODE_VERIFIER}
+        - NEXT_PUBLIC_CHAMALEON_KEY=${NEXT_PUBLIC_CHAMALEON_KEY}
+        - NEXT_PUBLIC_DROPBOX_CLIENT_ID=${NEXT_PUBLIC_DROPBOX_CLIENT_ID}
+        - NEXT_PUBLIC_GOOGLE_CLIENT_ID=${NEXT_PUBLIC_GOOGLE_CLIENT_ID}
+        - NEXT_PUBLIC_HUBSPOT_CLIENT_ID=${NEXT_PUBLIC_HUBSPOT_CLIENT_ID}
+        - NEXT_PUBLIC_NOTION_CLIENT_ID=${NEXT_PUBLIC_NOTION_CLIENT_ID}
         - NEXT_PUBLIC_NOTION_OAUTH_CLIENT_ID=${NEXT_PUBLIC_NOTION_OAUTH_CLIENT_ID}
-        - NEXT_PUBLIC_POSTHOG_KEY=${NEXT_PUBLIC_POSTHOG_KEY}
+        - NEXT_PUBLIC_OUTLOOK_CLIENT_ID=${NEXT_PUBLIC_OUTLOOK_CLIENT_ID}
+        - NEXT_PUBLIC_POSTHOG_API_KEY=${NEXT_PUBLIC_POSTHOG_API_KEY}
+        - NEXT_PUBLIC_POSTHOG_HOST=${NEXT_PUBLIC_POSTHOG_HOST}
+        - NEXT_PUBLIC_SENTRY_DSN=${NEXT_PUBLIC_SENTRY_DSN}
         - NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=${NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY}
-        - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
-        - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
+        - NEXT_PUBLIC_TYPEFORM_CLIENT_ID=${NEXT_PUBLIC_TYPEFORM_CLIENT_ID}
     env_file:
       - .env
     ports:
