--- a/.env.template
+++ b/.env.template
@@ -40,7 +40,8 @@ SPREADSHEET_ID=
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
 TIPTAP_PRO_TOKEN=
-
+GOOGLE_CLIENT_EMAIL=
+GOOGLE_SERVICE_PRIVATE_KEY=
 
 
 # Remember to adjust this to match the correct service role key. if supabase jwt secret is changed, the service role key will also change.
