--- a/stackweb.docker-compose.yml
+++ b/stackweb.docker-compose.yml
@@ -26,6 +26,8 @@ services:
         - NEXT_PUBLIC_SENTRY_DSN=${NEXT_PUBLIC_SENTRY_DSN}
         - NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=${NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY}
         - NEXT_PUBLIC_TYPEFORM_CLIENT_ID=${NEXT_PUBLIC_TYPEFORM_CLIENT_ID}
+        - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
+        - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
     env_file:
       - .env
     ports:
