--- a/stackweb.docker-compose.yml
+++ b/stackweb.docker-compose.yml
@@ -28,6 +28,8 @@ services:
         - NEXT_PUBLIC_TYPEFORM_CLIENT_ID=${NEXT_PUBLIC_TYPEFORM_CLIENT_ID}
         - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
         - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
+        - TIPTAP_PRO_TOKEN=${TIPTAP_PRO_TOKEN}
+
     env_file:
       - .env
     ports:
