--- a/mongodb/.env.example
+++ b/mongodb/.env.example
@@ -1,2 +1,5 @@
+# MongoDB Root Username.
 MONGO_INITDB_ROOT_USERNAME=stack_user
-MONGO_INITDB_ROOT_PASSWORD=SeCr3TPssW0rd
+
+# MongoDB Root Password.
+MONGO_INITDB_ROOT_PASSWORD=SeCr3TPssW0rdw
