--- a/.env.template
+++ b/.env.template
@@ -1,15 +1,34 @@
 # This is the .env file that will be used by the stackweb docker-compose. Some of the env variables are used during build time.
 
-# Adjust this to point to the correct API URL, here we are using the kong external (outside of docker network) URL, since it will be used by the frontend
-NEXT_PUBLIC_SUPABASE_URL=http://localhost:8800
+# This variable should equal to the `API_EXTERNAL_URL` variable in the /supabase/.env file
+# Example: NEXT_PUBLIC_SUPABASE_URL=http://192.168.1.43:8800
+# Example: NEXT_PUBLIC_SUPABASE_URL=https://stackdb.yourdomain.com
+NEXT_PUBLIC_SUPABASE_URL=http://<your-host>:8800
 
+
+# This variable should point to the URL where you will be hosting the frontend
+# For local development, you can point it to localhost:3000
+#
+# Example: NEXT_PUBLIC_URL=http://192.168.1.43:3000
+# Example: NEXT_PUBLIC_URL=https://stackai.yourdomain.com
+#
+NEXT_PUBLIC_URL="http://<your-host>:3000"
+
+
+# The following variables should point to the URL where you are hosting the backend.
+# For local development, you need to point it to the ip of your machine in your local network
+# check your ip by running `ipconfig` in your terminal (on Windows) or `ifconfig` in your terminal (on MacOS/Linux)
+#
+# Example: NEXT_PUBLIC_INDEX_URL=http://192.168.1.43:8000/
+# Example: NEXT_PUBLIC_CHAT_BACKEND_URL=https://stackapi.yourdomain.com/
+#
+# Since you are likey using a single machine to host all services, all of the following variables should point to the same URL
+NEXT_PUBLIC_INDEX_URL="http://<your-host>:8000/"
+NEXT_PUBLIC_CHAT_BACKEND_URL="http://<your-host>:8000/"
+NEXT_PUBLIC_STACKEND_URL="http://<your-host>:8000/"
 
 # Set the following variables to the correct values
-NEXT_PUBLIC_INDEX_URL="http://localhost:8000/"
-NEXT_PUBLIC_CHAT_BACKEND_URL="http://localhost:8000/"
-NEXT_PUBLIC_STACKEND_URL="http://localhost:8000/"
-NEXT_PUBLIC_URL="http://localhost:3000"
-NEXT_PUBLIC_VERCEL_ENV="development"
+NEXT_PUBLIC_VERCEL_ENV="production"
 NEXT_PUBLIC_REACT_APP_ENV="production"
 NEXT_PUBLIC_AIRTABLE_CLIENT_ID=
 NEXT_PUBLIC_AIRTABLE_CODE_VERIFIER=
