Update the documentation

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,9 @@
 # This is the .env file that will be used by the stackweb docker-compose. Some of the env variables are used during build time.
 
+# Command to get your local ip address on mac (make sure to append the correct port at the end!)
+# ifconfig | grep inet | grep -v 127.0.0.1 | grep -v '::' | awk '{print $2}'
+
+
 # This variable should equal to the `API_EXTERNAL_URL` variable in the /supabase/.env file
 # Example: NEXT_PUBLIC_SUPABASE_URL=http://192.168.1.43:8800
 # Example: NEXT_PUBLIC_SUPABASE_URL=https://stackdb.yourdomain.com
@@ -19,6 +23,7 @@ NEXT_PUBLIC_URL="http://<your-host>:3000"
 # For local development, you need to point it to the ip of your machine in your local network
 # check your ip by running `ipconfig` in your terminal (on Windows) or `ifconfig` in your terminal (on MacOS/Linux)
 #
+#
 # Example: NEXT_PUBLIC_INDEX_URL=http://192.168.1.43:8000/
 # Example: NEXT_PUBLIC_CHAT_BACKEND_URL=https://stackapi.yourdomain.com/
 #
@@ -27,41 +32,44 @@ NEXT_PUBLIC_INDEX_URL="http://<your-host>:8000/"
 NEXT_PUBLIC_CHAT_BACKEND_URL="http://<your-host>:8000/"
 NEXT_PUBLIC_STACKEND_URL="http://<your-host>:8000/"
 
-# Set the following variables to the correct values
-NEXT_PUBLIC_VERCEL_ENV="production"
-NEXT_PUBLIC_REACT_APP_ENV="production"
-NEXT_PUBLIC_AIRTABLE_CLIENT_ID=
-NEXT_PUBLIC_AIRTABLE_CODE_VERIFIER=
-NEXT_PUBLIC_CHAMALEON_KEY=
-NEXT_PUBLIC_DROPBOX_CLIENT_ID=
-NEXT_PUBLIC_GOOGLE_CLIENT_ID=
-NEXT_PUBLIC_HUBSPOT_CLIENT_ID=
-NEXT_PUBLIC_NOTION_CLIENT_ID=
-NEXT_PUBLIC_NOTION_OAUTH_CLIENT_ID=
-NEXT_PUBLIC_OUTLOOK_CLIENT_ID=
-NEXT_PUBLIC_POSTHOG_API_KEY=
-NEXT_PUBLIC_POSTHOG_HOST=
-NEXT_PUBLIC_SENTRY_DSN=
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
-NEXT_PUBLIC_TYPEFORM_CLIENT_ID=
 
 # Remember to adjust this to match the correct ANON key, if the jwt secret is changed, the ANON key will also change.
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+# Remember to adjust this to match the correct service role key. if supabase jwt secret is changed, the service role key will also change.
+SUPABASE_SERVICE_ROLE_KEY=
+
+# The TIPTAP_PRO_TOKEN is needed to build the stackweb container.
+TIPTAP_PRO_TOKEN=
+
+
+# Set the following variables to the correct values
+NEXT_PUBLIC_VERCEL_ENV="production"
+NEXT_PUBLIC_REACT_APP_ENV="production"
+NEXT_PUBLIC_AIRTABLE_CLIENT_ID="<your-airtable-client-id>"
+NEXT_PUBLIC_AIRTABLE_CODE_VERIFIER="<your-airtable-code-verifier>"
+NEXT_PUBLIC_CHAMALEON_KEY="<your-chamaleon-key>"
+NEXT_PUBLIC_DROPBOX_CLIENT_ID="<your-dropbox-client-id>"
+NEXT_PUBLIC_GOOGLE_CLIENT_ID="<your-google-client-id>"
+NEXT_PUBLIC_HUBSPOT_CLIENT_ID="<your-hubspot-client-id>"
+NEXT_PUBLIC_NOTION_CLIENT_ID="<your-notion-client-id>"
+NEXT_PUBLIC_NOTION_OAUTH_CLIENT_ID="<your-notion-oauth-client-id>"
+NEXT_PUBLIC_OUTLOOK_CLIENT_ID="<your-outlook-client-id>"
+NEXT_PUBLIC_POSTHOG_API_KEY="<your-posthog-api-key>"
+NEXT_PUBLIC_POSTHOG_HOST="<your-posthog-host>"
+NEXT_PUBLIC_SENTRY_DSN=""
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="<your-stripe-publishable-key>"
+NEXT_PUBLIC_TYPEFORM_CLIENT_ID="<your-typeform-client-id>"
+
 
 
 # Privete keys used in stackweb container
 VERCEL_ENV="development"
 SHEET_ID="0"
-NPM_RC=
-RESEND_API_KEY=
-SLACK_CUSTOMER_SUPPORT_WEBHOOK=
-SPREADSHEET_ID=
-STRIPE_SECRET_KEY=
-STRIPE_WEBHOOK_SECRET=
-TIPTAP_PRO_TOKEN=
-GOOGLE_CLIENT_EMAIL=
-GOOGLE_SERVICE_PRIVATE_KEY=
-
-
-# Remember to adjust this to match the correct service role key. if supabase jwt secret is changed, the service role key will also change.
-SUPABASE_SERVICE_ROLE_KEY=
+RESEND_API_KEY="<your-resend-api-key>"
+SLACK_CUSTOMER_SUPPORT_WEBHOOK="<your-slack-customer-support-webhook>"
+SPREADSHEET_ID="<your-spreadsheet-id>"
+STRIPE_SECRET_KEY="<your-stripe-secret-key>"
+STRIPE_WEBHOOK_SECRET="<your-stripe-webhook-secret>"
+GOOGLE_CLIENT_EMAIL="mail@example.io"
+GOOGLE_SERVICE_PRIVATE_KEY="<your-private-key>"
