--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,4 +1,6 @@
-# stackaionpremtest.eastus.cloudapp.azure.com {
+# EXAMPLE CONFIGURATION. UNCOMMENT AND ADJUST AS NEEDED.
+
+# <your-supabase-subdomain> {
 #     reverse_proxy /rest/v1/* kong:8000
 #     reverse_proxy /graphql/v1/* kong:8000
 #     reverse_proxy /auth/v1/* kong:8000
@@ -7,9 +9,16 @@
 #     reverse_proxy /functions/v1/* kong:8000
 #     reverse_proxy /analytics/v1/* kong:8000
 # 
-#     reverse_proxy /* stackweb:3000
 # 
 #     header {
 #         Content-Security-Policy "upgrade-insecure-requests"
 #     }
+# }
+
+# <your-stackweb-subdomain> {
+#     reverse_proxy /* stackweb:3000
+# }
+
+# <your-stackend-subdomain> {
+#     reverse_proxy /* stackend:8000
 # }
