--- a/stackend.env.template
+++ b/stackend.env.template
@@ -2,22 +2,26 @@
 # Variables that need to be adjusted for on-prem deployment
 # #########################################################
 
-# TODO: The default values for the urls are based on the docker-comopose setup.
-# TODO: Create a new 32bit base64 encription key
+
 # SUPABASE
-SUPABASE_URL=http://kong:8000
 SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
+
+# Create a new 32bit base64 encription key and paste it here 
 supabase_encryption_key='l5e9Z0ZEhrmg++Z5IrhWocBfZyBfM/A8Yy8vqjlfKlg='
+
+# do not change this
+SUPABASE_URL=http://kong:8000
 
 # POSTGRES (ADJUST WITH THE VALUES IN THE SUPABASE .env)
 POSTGRES_DB_HOST='db'
 POSTGRES_DB_NAME='postgres'
 POSTGRES_DB_PORT='5432'
-POSTGRES_DB_USER=
+POSTGRES_DB_USER='postgres'
 POSTGRES_DB_PASSWORD=
 
-MONGODB_URI=mongodb://mongodb:27017/?replicaSet=rs0
+# Get your username and password from the `mongodb/.env` file
+MONGODB_URI=mongodb://<your_username>:<your_password>@mongodb:27017
 
 # UNSTRUCTURED
 UNSTRUCTURED_URL=http://unstructured:8000/general/v0/general
@@ -30,14 +34,16 @@ CELERY_BACKEND_URL=redis://redis:6379
 # Weaviate
 WEAVIATE_URL=http://weaviate:9090
 WEAVIATE_KEY=
+SELF_HOSTED_WEAVIATE=true
 
 # REDIS
 REDIS_URL=redis://redis:6379
 
 # SENTRY ENVIRONMENT
-ENVIRONMENT='DEVELOPMENT'
-DEPLOYMENT_ENVIRONMENT='development_local'
-sentry_dsn=?
+ENVIRONMENT='production'
+DEPLOYMENT_ENVIRONMENT='production_stackend'
+# Change if you want to use Sentry
+sentry_dsn=
 
 
 
@@ -46,7 +52,7 @@ REPL_URL=http://stackrepl:7777
 
 
 # #########################################################
-# Third party services
+# Third party services (fill the ones you intend to use)
 # #########################################################
 
 # ## LLM PROVIDERS ## #
