--- a/stackend.env.template
+++ b/stackend.env.template
@@ -48,7 +48,8 @@ sentry_dsn=
 
 
 # STACK REPL
-REPL_URL=http://stackrepl:7777
+REPL_URL=http://stackrepl:7777/execute_code
+
 
 
 # #########################################################
