--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,4 @@ include:
   - supabase/docker-compose.yml
   - unstructured/docker-compose.yml
   - caddy/docker-compose.yml
-  - stackweb.docker-compose.yml
-  - stackend.docker-compose.yml
+  - stackrepl/docker-compose.yml
