update readme and template stackweb env file

--- a/stackweb/.env.example
+++ b/stackweb/.env.example
@@ -39,7 +39,7 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=
 # Remember to adjust this to match the correct service role key. if supabase jwt secret is changed, the service role key will also change.
 SUPABASE_SERVICE_ROLE_KEY=
 
-# Set the following variables to the correct values
+# Set the variables of the integrations you want to use
 NEXT_PUBLIC_VERCEL_ENV="production"
 NEXT_PUBLIC_REACT_APP_ENV="production"
 NEXT_PUBLIC_AIRTABLE_CLIENT_ID="<your-airtable-client-id>"
@@ -59,7 +59,8 @@ NEXT_PUBLIC_TYPEFORM_CLIENT_ID="<your-typeform-client-id>"
 
 
 
-# Privete keys used in stackweb container
+# Private keys used in stackweb container
+# Update the values of the integrations you want to use
 VERCEL_ENV="development"
 SHEET_ID="0"
 RESEND_API_KEY="<your-resend-api-key>"
