Update the stackweb dockerfile

--- a/stackweb/Dockerfile
+++ b/stackweb/Dockerfile
@@ -22,7 +22,18 @@ ARG NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY
 ARG NEXT_PUBLIC_TYPEFORM_CLIENT_ID
 ARG NEXT_PUBLIC_SUPABASE_ANON_KEY
 ARG NEXT_PUBLIC_SUPABASE_URL
-ARG TIPTAP_PRO_TOKEN
+
+ARG VERCEL_ENV
+ARG SHEET_ID
+ARG RESEND_API_KEY
+ARG SLACK_CUSTOMER_SUPPORT_WEBHOOK
+ARG SPREADSHEET_ID
+ARG STRIPE_SECRET_KEY
+ARG STRIPE_WEBHOOK_SECRET
+ARG GOOGLE_CLIENT_EMAIL
+ARG GOOGLE_SERVICE_PRIVATE_KEY
+ARG SUPABASE_SERVICE_ROLE_KEY
+
 
 RUN \
   if [ -f yarn.lock ]; then yarn run build; \
