--- a/stackweb/docker-compose.yml
+++ b/stackweb/docker-compose.yml
@@ -28,6 +28,16 @@ services:
         - NEXT_PUBLIC_TYPEFORM_CLIENT_ID=${NEXT_PUBLIC_TYPEFORM_CLIENT_ID}
         - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
         - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
+        - VERCEL_ENV=${VERCEL_ENV}
+        - SHEET_ID=${SHEET_ID}
+        - RESEND_API_KEY=${RESEND_API_KEY}
+        - SLACK_CUSTOMER_SUPPORT_WEBHOOK=${SLACK_CUSTOMER_SUPPORT_WEBHOOK}
+        - SPREADSHEET_ID=${SPREADSHEET_ID}
+        - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
+        - STRIPE_WEBHOOK_SECRET=${STRIPE_WEBHOOK_SECRET}
+        - GOOGLE_CLIENT_EMAIL=${GOOGLE_CLIENT_EMAIL}
+        - GOOGLE_SERVICE_PRIVATE_KEY=${GOOGLE_SERVICE_PRIVATE_KEY}
+        - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
 
     env_file:
       - .env
