update .env.example weaviate url

--- a/stackend/.env.example
+++ b/stackend/.env.example
@@ -32,7 +32,7 @@ CELERY_BROKER_URL=redis://redis:6379
 CELERY_BACKEND_URL=redis://redis:6379
 
 # Weaviate
-WEAVIATE_URL=http://weaviate:9090
+WEAVIATE_URL=weaviate
 WEAVIATE_KEY=
 SELF_HOSTED_WEAVIATE=true
 
