update docker compose with POOLER_TENANT_ID

--- a/stackend/.env.example
+++ b/stackend/.env.example
@@ -16,8 +16,9 @@ SUPABASE_URL=http://kong:8000
 # POSTGRES (ADJUST WITH THE VALUES IN THE SUPABASE .env)
 POSTGRES_DB_HOST='db'
 POSTGRES_DB_NAME='postgres'
-POSTGRES_DB_PORT='5432'
-POSTGRES_DB_USER='postgres'
+POSTGRES_DB_PORT='6543'
+# The username is in the format <db_username>.<tenant_id> Leave this with the default value.
+POSTGRES_DB_USER='postgres.stackai'
 POSTGRES_DB_PASSWORD=
 
 # Get your username and password from the `mongodb/.env` file
