--- a/supabase/.env.example
+++ b/supabase/.env.example
@@ -13,6 +13,8 @@ API_EXTERNAL_URL=http://<your-domain-or-ip>:8800
 # IP of the supabase server
 SUPABASE_PUBLIC_URL=http://<your-domain-or-ip>:8800
 
+# Tenant ID for Supavisor, leave this as stackai unless you know what you're doing
+POOLER_TENANT_ID=stackai
 
 ################################################################################################
 # Secrets
