Update stackweb.env.template to fix typo

--- a/scripts/environment_variables/templates/stackweb.env.template
+++ b/scripts/environment_variables/templates/stackweb.env.template
@@ -95,7 +95,7 @@ VERCEL_ENV="development"
 SHEET_ID="0"
 RESEND_API_KEY="<your-resend-api-key>"
 SLACK_CUSTOMER_SUPPORT_WEBHOOK="<your-slack-customer-support-webhook>"
-SLACK_SELF_HOSTED_WEBHOOK=<your-slack-self-hosted-webhook>"
+SLACK_SELF_HOSTED_WEBHOOK="<your-slack-self-hosted-webhook>"
 SPREADSHEET_ID="<your-spreadsheet-id>"
 STRIPE_SECRET_KEY="<your-stripe-secret-key>"
 STRIPE_WEBHOOK_SECRET="<your-stripe-webhook-secret>"
