add missing variable to docker compose

--- a/stackweb/docker-compose.yml
+++ b/stackweb/docker-compose.yml
@@ -38,6 +38,7 @@ services:
         - GOOGLE_CLIENT_EMAIL=${GOOGLE_CLIENT_EMAIL}
         - GOOGLE_SERVICE_PRIVATE_KEY=${GOOGLE_SERVICE_PRIVATE_KEY}
         - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
+        - SLACK_SELF_HOSTED_WEBHOOK=${SLACK_SELF_HOSTED_WEBHOOK}
 
     env_file:
       - .env
