add yet another variable to the stackweb dockerfile

--- a/stackweb/Dockerfile
+++ b/stackweb/Dockerfile
@@ -33,6 +33,7 @@ ARG STRIPE_WEBHOOK_SECRET
 ARG GOOGLE_CLIENT_EMAIL
 ARG GOOGLE_SERVICE_PRIVATE_KEY
 ARG SUPABASE_SERVICE_ROLE_KEY
+ARG SLACK_SELF_HOSTED_WEBHOOK
 
 
 RUN \
