add NEXT_PUBLIC_SITE_URL to dockerfile

--- a/scripts/environment_variables/templates/stackweb.env.template
+++ b/scripts/environment_variables/templates/stackweb.env.template
@@ -24,7 +24,7 @@
 NEXT_PUBLIC_SUPABASE_URL=http://{{VIRTUAL_MACHINE_IP_OR_URL}}:8800
 
 
-# VARIABLE: Next Public URL
+# VARIABLES: Next Public URL & Next Public Site URL
 # DESCRIPTION: URL where the browser will be able to access the frontend.
 # This variable should point to the URL where you will be hosting the frontend
 # For local development, you can point it to localhost:3000
@@ -33,6 +33,7 @@ NEXT_PUBLIC_SUPABASE_URL=http://{{VIRTUAL_MACHINE_IP_OR_URL}}:8800
 # Example: NEXT_PUBLIC_URL=https://stackai.yourdomain.com
 #
 NEXT_PUBLIC_URL="http://{{VIRTUAL_MACHINE_IP_OR_URL}}:3000"
+NEXT_PUBLIC_SITE_URL="http://{{VIRTUAL_MACHINE_IP_OR_URL}}:3000"
 
 
 # The following variables should point to the URL where you are hosting the backend.
