--- a/stackweb/Dockerfile
+++ b/stackweb/Dockerfile
@@ -22,6 +22,7 @@ ARG NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY
 ARG NEXT_PUBLIC_TYPEFORM_CLIENT_ID
 ARG NEXT_PUBLIC_SUPABASE_ANON_KEY
 ARG NEXT_PUBLIC_SUPABASE_URL
+ARG NEXT_PUBLIC_SITE_URL
 
 ARG VERCEL_ENV
 ARG SHEET_ID
