update template for stackend env variables

--- a/scripts/environment_variables/templates/stackend.env.template
+++ b/scripts/environment_variables/templates/stackend.env.template
@@ -12,6 +12,34 @@
 ########################################################
 
 
+# #########################################################
+# MAIN NETWORKING VARIABLES
+# #########################################################
+
+# VARIABLE: Stackend API URL
+# DESCRIPTION: This is the url where the Stackend API will be available from the outside.
+# Example: http://192.168.1.100:8000 or http://stackaiapi.my-domain.com
+# Impportant: Remove any trailing "/" from the url.
+# NOTE: If you are using a reverse proxy for TLS termination, point to your domain instead of the VM's IP.
+STACKEND_API_URL="http://{{VIRTUAL_MACHINE_IP_OR_URL}}:8000"
+
+# VARIABLE: Indexing API URL
+# DESCRIPTION: This is the url where the Indexing Cluster will be available from the outside.
+# If you are hosting StackAI in a single VM, you should use the same url as the Stackend API.
+# Impportant: Remove any trailing "/" from the url.
+# NOTE: If you are using a reverse proxy for TLS termination, point to your domain instead of the VM's IP.
+INDEXING_API_URL="http://{{VIRTUAL_MACHINE_IP_OR_URL}}:8000"
+
+# VARIABLE: Stackweb URL
+# DESCRIPTION: This is the url where the Stackweb will be available from the outside.
+# Impportant: Remove any trailing "/" from the url.
+# NOTE: If you are using a reverse proxy for TLS termination, point to your domain instead of the VM's IP.
+STACKWEB_URL="http://{{VIRTUAL_MACHINE_IP_OR_URL}}:3000"
+
+##########################################################
+# KEYS AND SECRETS
+##########################################################
+
 # SECRET: Supabase Anon Key
 # DESCRIPTION: This is the anon key that will be used to authenticate anonymous requests to Supabase services.
 SUPABASE_ANON_KEY="{{ANON_KEY}}"
@@ -25,7 +53,9 @@ SUPABASE_SERVICE_ROLE_KEY="{{SERVICE_ROLE_KEY}}"
 # DESCRIPTION: This is the encryption key that will be used to your integration credentials within the Supabase Postgres DB.
 supabase_encryption_key="{{ENCRYPTION_KEY}}"
 
-
+# SECRET: Stack AI Licence
+# DESCRIPTION: This is the licence key that will be used to activate the Stack AI services.
+STACKAI_LICENCE="{{STACKAI_LICENCE}}"
 
 # POSTGRES CONFIGURATION
 # This values musth match the ones in the supabase/.env file.
@@ -218,12 +248,6 @@ MAILCHIMP_API_KEY=
 
 # MISTRAL
 MISTRAL_API_KEY=
-
-
-# NGROK
-NGROK_AUTHTOKEN=
-NGROK_DOMAIN=
-NGROK_URL=
 
 # NOTION
 NOTION_CLIENT_ID=
