adds display_order

--- a/stackend/llm_local_config.toml
+++ b/stackend/llm_local_config.toml
@@ -17,6 +17,7 @@
 [llms.providers.Local]
 plan_required = "enterprise"
 hosted_by = "Stack AI"
+display_order = 13
 
 
 # REFERENCE LOCAL MODEL CONFIGURATION:
