update stackweb docker compose and dockerfile

--- a/stackweb/Dockerfile
+++ b/stackweb/Dockerfile
@@ -23,6 +23,7 @@ ARG NEXT_PUBLIC_TYPEFORM_CLIENT_ID
 ARG NEXT_PUBLIC_SUPABASE_ANON_KEY
 ARG NEXT_PUBLIC_SUPABASE_URL
 ARG NEXT_PUBLIC_SITE_URL
+ARG NEXT_PUBLIC_SHAREPOINT_CLIENT_ID
 
 ARG VERCEL_ENV
 ARG SHEET_ID
