--- a/stackweb/docker-compose.yml
+++ b/stackweb/docker-compose.yml
@@ -40,6 +40,7 @@ services:
         - GOOGLE_SERVICE_PRIVATE_KEY=${GOOGLE_SERVICE_PRIVATE_KEY}
         - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
         - SLACK_SELF_HOSTED_WEBHOOK=${SLACK_SELF_HOSTED_WEBHOOK}
+        - NEXT_PUBLIC_SHAREPOINT_CLIENT_ID=${NEXT_PUBLIC_SHAREPOINT_CLIENT_ID}
 
     env_file:
       - .env
