--- a/stackend/llm_local_config.toml
+++ b/stackend/llm_local_config.toml
@@ -32,7 +32,7 @@ plan_required = "enterprise"
 # [llms.providers.Local."meta-llama/Meta-Llama-3.1-8B-Instruct-Turbo"]
 # endpoint_base_url = "https://api.together.xyz/v1"
 # api_key = "example api key"
-# name = "Meta Llama 3.1 Turbo"
+# model_name = "Meta Llama 3.1 Turbo"
 # description = "This is a dummy configuration model that you can use as reference to create your own configuration."
 # context_window = 1024
 # reasoning = 1
@@ -42,12 +42,11 @@ plan_required = "enterprise"
 # has_json_format = false
 # has_json_schema = false
 # has_vision = false
-# supported_media_types = []\
-
-
+# supported_media_types = []
+# has_function_calling = false
 
 [llms.providers.Local.generic_local]
-name = "OpenAI API Compatible Model"
+model_name = "OpenAI API Compatible Model"
 description = "A local model for testing and development. Go into the node settings and set up the endpoint base url and api key of the node for it to work."
 context_window = 128000
 reasoning = 1
@@ -58,6 +57,7 @@ has_json_format = false
 has_json_schema = false
 has_vision = false
 supported_media_types = []
+has_function_calling = false
 
 
 # Remember to adjust this as well!
