--- a/updates/2025-03-03/stackweb/docker-compose.yml
+++ b/updates/2025-03-03/stackweb/docker-compose.yml
@@ -6,41 +6,50 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        - NEXT_PUBLIC_INDEX_URL=${NEXT_PUBLIC_INDEX_URL}
-        - NEXT_PUBLIC_CHAT_BACKEND_URL=${NEXT_PUBLIC_CHAT_BACKEND_URL}
-        - NEXT_PUBLIC_STACKEND_URL=${NEXT_PUBLIC_STACKEND_URL}
-        - NEXT_PUBLIC_URL=${NEXT_PUBLIC_URL}
-        - NEXT_PUBLIC_VERCEL_ENV=${NEXT_PUBLIC_VERCEL_ENV}
-        - NEXT_PUBLIC_REACT_APP_ENV=${NEXT_PUBLIC_REACT_APP_ENV}
+        - FONTAWESOME_PACKAGE_TOKEN=${FONTAWESOME_PACKAGE_TOKEN}
+        - GOOGLE_CLIENT_EMAIL=${GOOGLE_CLIENT_EMAIL}
+        - GOOGLE_SERVICE_PRIVATE_KEY=${GOOGLE_SERVICE_PRIVATE_KEY}
         - NEXT_PUBLIC_AIRTABLE_CLIENT_ID=${NEXT_PUBLIC_AIRTABLE_CLIENT_ID}
         - NEXT_PUBLIC_AIRTABLE_CODE_VERIFIER=${NEXT_PUBLIC_AIRTABLE_CODE_VERIFIER}
         - NEXT_PUBLIC_CHAMALEON_KEY=${NEXT_PUBLIC_CHAMALEON_KEY}
+        - NEXT_PUBLIC_CHAT_BACKEND_URL=${NEXT_PUBLIC_CHAT_BACKEND_URL}
+        - NEXT_PUBLIC_CONFLUENCE_CLIENT_ID=${NEXT_PUBLIC_CONFLUENCE_CLIENT_ID}
         - NEXT_PUBLIC_DROPBOX_CLIENT_ID=${NEXT_PUBLIC_DROPBOX_CLIENT_ID}
         - NEXT_PUBLIC_GOOGLE_CLIENT_ID=${NEXT_PUBLIC_GOOGLE_CLIENT_ID}
+        - NEXT_PUBLIC_GOOGLE_WORKSPACE_CLIENT_ID=${NEXT_PUBLIC_GOOGLE_WORKSPACE_CLIENT_ID}
         - NEXT_PUBLIC_HUBSPOT_CLIENT_ID=${NEXT_PUBLIC_HUBSPOT_CLIENT_ID}
+        - NEXT_PUBLIC_INDEX_URL=${NEXT_PUBLIC_INDEX_URL}
         - NEXT_PUBLIC_NOTION_CLIENT_ID=${NEXT_PUBLIC_NOTION_CLIENT_ID}
         - NEXT_PUBLIC_NOTION_OAUTH_CLIENT_ID=${NEXT_PUBLIC_NOTION_OAUTH_CLIENT_ID}
         - NEXT_PUBLIC_OUTLOOK_CLIENT_ID=${NEXT_PUBLIC_OUTLOOK_CLIENT_ID}
         - NEXT_PUBLIC_POSTHOG_API_KEY=${NEXT_PUBLIC_POSTHOG_API_KEY}
         - NEXT_PUBLIC_POSTHOG_HOST=${NEXT_PUBLIC_POSTHOG_HOST}
+        - NEXT_PUBLIC_REACT_APP_ENV=${NEXT_PUBLIC_REACT_APP_ENV}
         - NEXT_PUBLIC_SENTRY_DSN=${NEXT_PUBLIC_SENTRY_DSN}
+        - NEXT_PUBLIC_SHAREPOINT_CLIENT_ID=${NEXT_PUBLIC_SHAREPOINT_CLIENT_ID}
         - NEXT_PUBLIC_SITE_URL=${NEXT_PUBLIC_SITE_URL}
+        - NEXT_PUBLIC_STACKEND_INFERENCE_URL=${NEXT_PUBLIC_STACKEND_INFERENCE_URL}
+        - NEXT_PUBLIC_STACKEND_URL=${NEXT_PUBLIC_STACKEND_URL}
+        - NEXT_PUBLIC_STRIPE_CLIENT_ID=${NEXT_PUBLIC_STRIPE_CLIENT_ID}
         - NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=${NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY}
-        - NEXT_PUBLIC_TYPEFORM_CLIENT_ID=${NEXT_PUBLIC_TYPEFORM_CLIENT_ID}
         - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
         - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
-        - VERCEL_ENV=${VERCEL_ENV}
-        - SHEET_ID=${SHEET_ID}
+        - NEXT_PUBLIC_TYPEFORM_CLIENT_ID=${NEXT_PUBLIC_TYPEFORM_CLIENT_ID}
+        - NEXT_PUBLIC_URL=${NEXT_PUBLIC_URL}
+        - NEXT_PUBLIC_VERCEL_ENV=${NEXT_PUBLIC_VERCEL_ENV}
+        - NEXT_PUBLIC_ZENDESK_CLIENT_ID=${NEXT_PUBLIC_ZENDESK_CLIENT_ID}
+        - NPM_RC=${NPM_RC}
+        - REACT_APP_ENV=${REACT_APP_ENV}
         - RESEND_API_KEY=${RESEND_API_KEY}
+        - SHEET_ID=${SHEET_ID}
         - SLACK_CUSTOMER_SUPPORT_WEBHOOK=${SLACK_CUSTOMER_SUPPORT_WEBHOOK}
+        - SLACK_SELF_HOSTED_WEBHOOK=${SLACK_SELF_HOSTED_WEBHOOK}
         - SPREADSHEET_ID=${SPREADSHEET_ID}
         - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
         - STRIPE_WEBHOOK_SECRET=${STRIPE_WEBHOOK_SECRET}
-        - GOOGLE_CLIENT_EMAIL=${GOOGLE_CLIENT_EMAIL}
-        - GOOGLE_SERVICE_PRIVATE_KEY=${GOOGLE_SERVICE_PRIVATE_KEY}
         - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
-        - SLACK_SELF_HOSTED_WEBHOOK=${SLACK_SELF_HOSTED_WEBHOOK}
-        - NEXT_PUBLIC_SHAREPOINT_CLIENT_ID=${NEXT_PUBLIC_SHAREPOINT_CLIENT_ID}
+        - TIPTAP_PRO_TOKEN=${TIPTAP_PRO_TOKEN}
+        - VERCEL_ENV=${VERCEL_ENV}
 
     env_file:
       - .env
