update stackweb env template

--- a/scripts/environment_variables/templates/stackweb.env.template
+++ b/scripts/environment_variables/templates/stackweb.env.template
@@ -49,6 +49,8 @@ NEXT_PUBLIC_SITE_URL="http://{{VIRTUAL_MACHINE_IP_OR_URL}}:3000"
 NEXT_PUBLIC_INDEX_URL="http://{{VIRTUAL_MACHINE_IP_OR_URL}}:8000/"
 NEXT_PUBLIC_CHAT_BACKEND_URL="http://{{VIRTUAL_MACHINE_IP_OR_URL}}:8000/"
 NEXT_PUBLIC_STACKEND_URL="http://{{VIRTUAL_MACHINE_IP_OR_URL}}:8000/"
+NEXT_PUBLIC_STACKEND_INFERENCE_URL="http://{{VIRTUAL_MACHINE_IP_OR_URL}}:8000/"
+
 
 
 # SECRET KEY: Supabase Anon Key
@@ -87,8 +89,11 @@ NEXT_PUBLIC_POSTHOG_HOST="<your-posthog-host>"
 NEXT_PUBLIC_SENTRY_DSN=""
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="<your-stripe-publishable-key>"
 NEXT_PUBLIC_TYPEFORM_CLIENT_ID="<your-typeform-client-id>"
-
-
+NEXT_PUBLIC_SHAREPOINT_CLIENT_ID="<your-sharepoint-client-id>"
+NEXT_PUBLIC_CONFLUENCE_CLIENT_ID="<your-confluence-client-id>"
+NEXT_PUBLIC_GOOGLE_WORKSPACE_CLIENT_ID="<your-google-workspace-client-id>"
+NEXT_PUBLIC_STRIPE_CLIENT_ID="<your-stripe-client-id>"
+NEXT_PUBLIC_ZENDESK_CLIENT_ID="<your-zendesk-client-id>"
 
 # Private keys used in stackweb container
 # Update the values of the integrations you want to use
@@ -102,3 +107,4 @@ STRIPE_SECRET_KEY="<your-stripe-secret-key>"
 STRIPE_WEBHOOK_SECRET="<your-stripe-webhook-secret>"
 GOOGLE_CLIENT_EMAIL="mail@example.io"
 GOOGLE_SERVICE_PRIVATE_KEY="<your-private-key>"
+REACT_APP_ENV="production"
